--- a/index.html
+++ b/index.html
@@ -4,19 +4,15 @@ author_profile: true
 ---
 
 <p>
-I am a Postdoctoral Fellow in Technology and International Security at the <a href="https://igcc.ucsd.edu/" target="_blank">UC Institute on Global Conflict and Cooperation</a> in Washington, DC. I received my Ph.D. in <a href="http://politics.princeton.edu/" target="_blank">Politics</a> from <a href="https://www.princeton.edu/" target="_blank">Princeton University</a> in 2021.
+I am an assistant professor at the <a href="https://https://usnwc.edu//" target="_blank">Naval War College</a>. Previously I was a Postdoctoral Fellow in Technology and International Security at the <a href="https://igcc.ucsd.edu/" target="_blank">UC Institute on Global Conflict and Cooperation</a> in Washington, DC. I received my Ph.D. in <a href="http://politics.princeton.edu/" target="_blank">Politics</a> from <a href="https://www.princeton.edu/" target="_blank">Princeton University</a> in 2021.
 </p>
 
 <p>
-My main research interests lie in the intersection of grand strategy and domestic politics, with a focus on hybrid conflicts and the foreign policy of revisionist states. I study the mechanisms of polarization behind revisionist states' strategic use of influence operations and disinformation using a mix of qualitative, experimental, and computational methods.
+My main research interests lie in the intersection of grand strategy and domestic politics.  In particular, I study how revisionist powers leverage diverse tools of statecraft to shape their adversaries' domestic politics to their strategic advantage.  I examine the mechanisms behind the use of influence and information operations by combining qualitative, experimental, and computational methods.  Through the generous support of a Minerva Research Initiative 2022-2025 grant, my latest research project unlocks the mechanisms through which Russian and Chinese information operations shape public opinion and political behaviors in target states.
 </p>
 
 <p>
-My job market paper, "<a href="http://j.mp/nFoster" target="_blank">Polarization for Paralysis: How Revisionist States Weaponize Information to Shift Foreign Political Behaviors</a>," studies how Russian state-sponsored news content polarizes voters in the Baltics to paralyze policy decision-making in the target states. An earlier version of this paper was selected as the 2020 Timothy E. Cook Best Graduate Student Paper Honorable Mention by the American Political Science Association's Political Communication Section.
-</p>
-
-<p>
-Another strand of my research focuses on democratization and contentious politics in the Middle East and North Africa. My first book, <a href="https://www.amazon.com/Mauritania-Struggle-Democracy-Studies-Africa/dp/1935049305" target="_blank"><i>Mauritania: The Struggle for Democracy</i></a> (2010, <a href="https://www.rienner.com/title/Mauritania_The_Struggle_for_Democracy" target="_blank">Lynne Rienner</a>), centers on electoral autocracy and the simulation of democratization.
+Another strand of my research focuses on democratization and contentious politics in the Middle East and North Africa. My first book, <a href="https://www.amazon.com/Mauritania-Struggle-Democracy-Studies-Africa/dp/1935049305" target="_blank"><i>Mauritania: The Struggle for Democracy</i></a> (2010, <a href="https://www.rienner.com/title/Mauritania_The_Struggle_for_Democracy" target="_blank">Lynne Rienner</a>), centers on electoral autocracy and the simulation of democratization as part of patron-client relations in international politics.
 </p>
 
 <p>
