--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ author_profile: true
 ---
 
 <p>
-I am an assistant professor at the <a href="https://https://usnwc.edu//" target="_blank">Naval War College</a>. Previously I was a Postdoctoral Fellow in Technology and International Security at the <a href="https://igcc.ucsd.edu/" target="_blank">UC Institute on Global Conflict and Cooperation</a> in Washington, DC. I received my Ph.D. in <a href="http://politics.princeton.edu/" target="_blank">Politics</a> from <a href="https://www.princeton.edu/" target="_blank">Princeton University</a> in 2021.
+I am an assistant professor at the <a href="https://usnwc.edu" target="_blank">Naval War College</a>. Previously I was a Postdoctoral Fellow in Technology and International Security at the <a href="https://igcc.ucsd.edu/" target="_blank">UC Institute on Global Conflict and Cooperation</a> in Washington, DC. I received my Ph.D. in <a href="http://politics.princeton.edu/" target="_blank">Politics</a> from <a href="https://www.princeton.edu/" target="_blank">Princeton University</a> in 2021.
 </p>
 
 <p>
