--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ I am an assistant professor at the <a href="https://usnwc.edu" target="_blank">N
 </p>
 
 <p>
-My main research interests lie in the intersection of grand strategy and domestic politics.  In particular, I study how revisionist powers leverage diverse tools of statecraft to shape their adversaries' domestic politics to their strategic advantage.  I examine the mechanisms behind the use of influence and information operations by combining qualitative, experimental, and computational methods.  Through the generous support of a Minerva Research Initiative 2022-2025 grant, my latest research project unlocks the mechanisms through which Russian and Chinese information operations shape public opinion and political behaviors in target states.
+I study how revisionist powers shape their adversaries' domestic politics to their strategic advantage, with a regional focus on Russian foreign policy towards the Baltic states and Eastern Europe.  I examine the mechanisms behind the use of influence and information operations by combining qualitative, experimental, and computational methods.  Through the generous support of a Minerva Research Initiative 2022-2025 grant, my latest research project unlocks the mechanisms through which Russian and Chinese information operations shape public opinion and political behaviors in target states.
 </p>
 
 <p>
