--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ I am an assistant professor at the <a href="https://usnwc.edu" target="_blank">N
 </p>
 
 <p>
-I study how revisionist powers shape their adversaries' domestic politics to their strategic advantage, with a regional focus on Russian foreign policy towards the Baltic states and Eastern Europe.  I examine the mechanisms behind the use of influence and information operations by combining qualitative, experimental, and computational methods.  Through the generous support of a Minerva Research Initiative 2022-2025 grant, my latest research project unlocks the mechanisms through which Russian and Chinese information operations shape public opinion and political behaviors in target states.
+  My research studies how revisionist powers employ new technologies, like online platforms and raw materials for microchip production, to reshape great power relations in their favor. With the generous support of a Minerva Research Initiative 2022-2025 grant, I combine qualitative, experimental, and computational methods to unlock the mechanisms through which Russian and Chinese information operations shape public opinion and political behaviors in target states.
 </p>
-
+  
 <p>
 Another strand of my research focuses on democratization and contentious politics in the Middle East and North Africa. My first book, <a href="https://www.amazon.com/Mauritania-Struggle-Democracy-Studies-Africa/dp/1935049305" target="_blank"><i>Mauritania: The Struggle for Democracy</i></a> (2010, <a href="https://www.rienner.com/title/Mauritania_The_Struggle_for_Democracy" target="_blank">Lynne Rienner</a>), centers on electoral autocracy and the simulation of democratization as part of patron-client relations in international politics.
 </p>
